...
                    android:text="@string/title_event_query_time_from"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etRadius" />

                <TextView
                    android:id="@+id/tvFromDate"
                    style="@style/BigNormalAttribute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.startDateText}"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
...
                    android:text="@string/title_event_query_time_to"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eventQueryFromDateBarrier" />

                <TextView
                    android:id="@+id/tvToDate"
                    style="@style/BigNormalAttribute"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.endDateText}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />
...
